--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,8 @@
 ---
-import Welcome from "../components/Welcome.astro";
+import LandingPage from "../components/landing/LandingPage.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout>
-  <Welcome />
+<Layout title="GoalTracker - Osiągaj cele z pomocą AI">
+  <LandingPage />
 </Layout>
