Changed app title

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,6 @@ import LandingPage from "../components/landing/LandingPage.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="GoalTracker - Osiągaj cele z pomocą AI">
+<Layout title="Aimbition - Be Ambitious. Aim for the greatest goals.">
   <LandingPage />
 </Layout>
