--- a/src/pages/login.astro
+++ b/src/pages/login.astro
@@ -3,7 +3,7 @@ import Layout from "@/layouts/Layout.astro";
 import LoginPage from "@/components/auth/LoginPage";
 ---
 
-<Layout title="Logowanie">
+<Layout title="Logowanie | Aimbition">
   <main aria-label="Logowanie">
     <LoginPage client:load />
   </main>
