--- a/src/pages/register.astro
+++ b/src/pages/register.astro
@@ -3,6 +3,6 @@ import Layout from "@/layouts/Layout.astro";
 import { RegisterPage } from "@/components/auth/RegisterPage";
 ---
 
-<Layout title="Rejestracja | GoalTracker">
+<Layout title="Rejestracja | Aimbition">
   <RegisterPage client:load />
 </Layout>
