--- a/src/pages/app/goals/index.astro
+++ b/src/pages/app/goals/index.astro
@@ -3,8 +3,8 @@ import Layout from "../../../layouts/Layout.astro";
 import GoalsListPage from "../../../components/goals/GoalsListPage";
 ---
 
-<Layout title="Lista celów">
-  <main aria-label="Lista celów">
+<Layout title="Goals List">
+  <main aria-label="Goals List">
     <GoalsListPage client:load />
   </main>
 </Layout>
