--- a/src/components/landing/AuthButtons.astro
+++ b/src/components/landing/AuthButtons.astro
@@ -4,7 +4,7 @@ interface Props {
   registerText?: string;
 }
 
-const { loginText = "Zaloguj się", registerText = "Załóż konto" } = Astro.props;
+const { loginText = "Log in", registerText = "Sign up" } = Astro.props;
 ---
 
 <div class="flex flex-col sm:flex-row gap-4 justify-center items-center">
